[fix] 배너/팝업 OpenAI 클라이언트 방어 로직 추가